working version of node file server

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
         <tr>
             <td>Ime</td>
             <td>Opcije</td>
+            <td>Veličina Fajla (kB)</td>
         </tr>
     </table>
 
