additional changes on table display

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
                 <table id="fileTable" >
                     <th>Title</th>
                     <th>Content</th>
+                    <th>File size</th>
                 </table>
             </div>
         </div>
