delete file finished

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
                 <button  class="openBtn" onclick="openDialog()">New File</button>
                 <table id="fileTable" >
                     <th>Title</th>
-                    <th>Content</th>
+                    <th>Action</th>
                     <th>File size</th>
                 </table>
             </div>
